<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="validacao">Validação</string>
    <string name="texto_SMS">Você recebeu um SMS para validação de seu número, digite o codigo de validação abaixo:</string>
    <string name="botao_validador">Validar</string>
    <string name="botao_logar">Fazer Login</string>
    <string name="texto_cadastre">Não tem conta? Cadastre-se.</string>
    <string name="action_settings">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="action_pesquisa">Pesquisar</string>
    <string name="action_add">Adicionar Contato</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
