<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity">


    <item android:id="@+id/item_pesquisa" android1:title="@string/action_pesquisa"
        android:orderInCategory="300" android:showAsAction="ifRoom"
        android1:icon="@drawable/ic_search"/>
    <item android:id="@+id/item_add" android1:title="@string/action_add"
        android:orderInCategory="100" android:showAsAction="ifRoom"
        android1:icon="@drawable/ic_person_add"/>
    <item android:id="@+id/action_settings" android1:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never"/>

    <item android:id="@+id/action_sair" android1:title="@string/action_sair"
        android:orderInCategory="200" android:showAsAction="never" />

</menu>