<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="whatsappclone.ivecio.com.whatsappclone.activity.ValidadorAcitivity"
    android:background="@color/colorPrimary2">

    <ImageView
        android:layout_width="@dimen/largura_logo"
        android:layout_height="@dimen/altura_logo"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/validacao"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:textColor="@color/colorTextoTela" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/texto_SMS"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:textColor="@color/colorTextoTela"
        android:paddingLeft="20dp"
        android:paddingRight="5dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/cod_validador"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:background="@color/colordentrocaixa"
        android:textColor="@color/colorTextBox"
        android:hint="Digite seu código!"
        android:padding="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_validador"
        android:id="@+id/bt_validar"
        android:layout_below="@+id/cod_validador"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimaryDark2" />

</RelativeLayout>
